--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "dais0nMemo"
 theme = "hucore"
 hasCJKLanguage = true
-googleAnalytics = ""
+googleAnalytics = "UA-111937976-1"
 
 [taxonomies]
 tag = "tags"
