--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dais0n.github.io/blog"
+baseURL = "https://blog.dais0n.net"
 languageCode = "en-us"
 title = "dais0nMemo"
 theme = "hucore"
