fix: social url

--- a/config.toml
+++ b/config.toml
@@ -20,5 +20,5 @@ url = "https://github.com/dais0n"
 fa_icon = "fa-github"
 
 [[params.social]]
-url = "https://twitter.com/daison8383"
+url = "https://twitter.com/dais0n_"
 fa_icon = "fa-twitter"
