--- a/config.toml
+++ b/config.toml
@@ -22,3 +22,7 @@ fa_icon = "fa-github"
 [[params.social]]
 url = "https://twitter.com/dais0n_"
 fa_icon = "fa-twitter"
+
+[[params.social]]
+url = "https://www.instagram.com/dais0n_"
+fa_icon = "fa-instagram"
