--- a/config.toml
+++ b/config.toml
@@ -1,29 +1,87 @@
 baseURL = "https://blog.dais0n.net"
 languageCode = "en-us"
 title = "dais0nNote"
-theme = "hucore"
+theme = "ezhil"
 hasCJKLanguage = true
+
+# Enable syntax highlighting.
+pygmentsstyle = "solarized-dark"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+# Your Google analytics code.
 googleAnalytics = "UA-111937976-1"
+
+# Your Disqus sortname.
 disqusShortname = "blog-dais0n-net"
 
-[taxonomies]
-tag = "tags"
-category = "categories"
+# Number of posts to show in recent posts list (Optional). Defaults to 10.
+paginate = 5
 
 [params]
-description = "dais0nNote"
-keywords = ["dais0nNote"]
-author = "Takuya Omura"
-sharingicons = true
+# Blog subtitle which appears below blog title. Supports markdown.
+subtitle = ""
 
+# Content types which are included in home page recent posts list.
+mainSections = ["posts/engineering"]
+
+# Content types which are excludes Disqus comments.
+disableDisqusTypes = ["page"]
+
+# If social media links are enabled then enable this to fetch icons from CDN instead of hosted on your site.
+featherIconsCDN = true
+
+# Specify favicon (icons/i.png maps to static/icons/i.png). No favicon if not defined.
+favicon = "myicon.ico"
+
+# Switch to dark mode or auto detect mode from OS (Optional).
+# "dark" will set mode to dark and "auto" will switch to dark mode if OS is in dark mode.
+mode = "auto" # "dark" or "auto"
+
+# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
+# root by Hugo. For example if you have custom CSS file under `static/css/custom.css` then
+# you can specify custom css path as `css/custom.css`.
+customCSS = "css/custom.css"
+
+# Custom list of Javascript files to load. Just like custom CSS you can place js files under
+# `static/js` folder and specify path here as `js/script-name.js`.
+customJS = [""]
+
+# Main menu which appears below site header.
+
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 1
+
+[[menu.main]]
+name = "Hobby"
+url = "/posts/hobby"
+weight = 2
+
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 3
+
+# Social media links which shows up on site header.
+# Uses feather icons for icons. You can [search icon names from here](https://feathericons.com/).
 [[params.social]]
+name = "Github"
+icon = "github"
 url = "https://github.com/dais0n"
-fa_icon = "fa-github"
 
 [[params.social]]
+name = "Twitter"
+icon = "twitter"
 url = "https://twitter.com/dais0n_"
-fa_icon = "fa-twitter"
 
 [[params.social]]
+name = "Instagram"
+icon = "instagram"
 url = "https://www.instagram.com/dais0n_"
-fa_icon = "fa-instagram"
+
+# Enable tags.
+[taxonomies]
+tag = "tags"
+
