--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.dais0n.net"
+baseURL = "https://blog.dais0n.net/"
 languageCode = "en-us"
 title = "dais0nNote"
 theme = "ezhil"
